<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/app_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="24dp"
                android:background="@color/mz_theme_color_seagreen"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_below="@id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/icon"
            android:layout_marginTop="@dimen/space_32"/>
        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:textColor="@color/mz_theme_color_crimson"
            android:text="@string/app_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/space_32"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_name"
            android:layout_marginLeft="@dimen/space_24"
            android:layout_marginRight="@dimen/space_24"
            android:layout_marginTop="@dimen/space_32"
            android:lineSpacingExtra="5dp"
            android:textSize="16sp"
            android:text="@string/about_content"/>

        <TextView
            android:id="@+id/github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_centerHorizontal="true"
            android:text="@string/about_github"
            android:layout_below="@+id/content"/>
    </RelativeLayout>

</RelativeLayout>