<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ripple"
    android:clickable="true">

    <RelativeLayout
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:clickable="false">

        <ImageView
            android:id="@+id/iv_arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/space_16"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:src="@drawable/ic_arrow_back_black_24dp"
            tools:ignore="RtlHardcoded"
        />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/author_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_toolbar">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/author_photo"
            android:layout_width="@dimen/space_100"
            android:layout_height="@dimen/space_100"
            android:layout_centerHorizontal="true"
            android:elevation="@dimen/space_4"
            android:padding="1px"
            android:src="@mipmap/icon"/>

        <TextView
            android:id="@+id/tv_author_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/author_photo"
            android:layout_marginTop="@dimen/space_16"
            android:gravity="center"
            android:text="yuxuehai"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_author_name"
            android:layout_marginTop="@dimen/space_16"
            android:gravity="center"/>

        <LinearLayout
            android:id="@+id/ll_function_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_time"
            android:layout_marginTop="@dimen/space_16"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_download"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_4"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:drawablePadding="@dimen/space_16"
                android:drawableTop="@drawable/load_photo"
                android:gravity="center"
                android:text="@string/string_download"
                tools:ignore="RtlHardcoded"/>

            <TextView
                android:id="@+id/tv_share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:drawablePadding="@dimen/space_16"
                android:drawableTop="@drawable/share"
                android:gravity="center"
                android:text="@string/string_share"
                tools:ignore="RtlHardcoded"/>

            <TextView
                android:id="@+id/tv_set_wallpager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_4"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:drawablePadding="@dimen/space_16"
                android:drawableTop="@drawable/set_wall_page"
                android:gravity="center"
                android:text="@string/string_set_wallpager"
                tools:ignore="RtlHardcoded"/>

        </LinearLayout>

        <!--进度条-->
        <ProgressBar
            android:id="@+id/progressbar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@+id/ll_function_layout"
            android:layout_marginBottom="@dimen/space_8"
            android:layout_marginEnd="@dimen/space_16"
            android:layout_marginStart="@dimen/space_16"
            android:layout_marginTop="@dimen/space_16"
            android:alpha="0"
            android:max="100"
            android:progressDrawable="@drawable/load_photo_progressbar"/>

        <View
            android:id="@+id/divide_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:layout_below="@+id/progressbar"
            android:layout_marginTop="@dimen/space_2"
            android:background="@color/graywhite"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divide_line"
            android:layout_marginEnd="@dimen/space_16"
            android:layout_marginStart="@dimen/space_16"
            android:clickable="false"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:clickable="false"
                android:gravity="center_vertical"
                android:text="@string/string_photo_value"
                android:textColor="@color/grey_700"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_attr_size"
                style="@style/PhotoAttrTextViewStyle"
                android:drawableLeft="@drawable/ic_size"/>

            <TextView
                android:id="@+id/tv_attr_exposure"
                style="@style/PhotoAttrTextViewStyle"
                android:drawableLeft="@drawable/ic_exposure"/>

            <TextView
                android:id="@+id/tv_attr_aperture"
                style="@style/PhotoAttrTextViewStyle"
                android:drawableLeft="@drawable/ic_aperture"/>

            <TextView
                android:id="@+id/tv_attr_focal"
                style="@style/PhotoAttrTextViewStyle"
                android:drawableLeft="@drawable/ic_focal"/>

            <TextView
                android:id="@+id/tv_attr_model"
                style="@style/PhotoAttrTextViewStyle"
                android:drawableLeft="@drawable/ic_model"/>

            <TextView
                android:id="@+id/tv_attr_iso"
                style="@style/PhotoAttrTextViewStyle"
                android:drawableLeft="@drawable/ic_iso"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>